# telegram

./: .gitignore  .telegram  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  module.nix  result  shell.nix
.github/workflows/: build.yml  test.yml
bots/xeonitte/: Cargo.toml
bots/xinitra/: Cargo.toml
bots/xinuxmgr/: .env.example  Cargo.toml  Dockerfile  dump
bots/xinuxmgr/data/: topics.json
bots/xinuxmgr/src/: lib.rs  main.rs
bots/xinuxmgr/src/functions/: about.rs  check.rs  feedback.rs  help.rs  inline.rs  joined.rs  mod.rs  rules.rs  start.rs  warn.rs
bots/xinuxmgr/src/hooks/: is_private.rs  mod.rs
bots/xinuxmgr/src/utils/: inlines.rs  message.rs  mod.rs  topics.rs  transformation.rs
data/: roadmap.md  source.json  topics.json
docker/: .dockerignore  .env.xinuxmgr  .gitignore  Dockerfile.xinuxmgr  compose.yaml
src/: bot.rs  config.rs  lib.rs  main.rs
src/functions/: about.rs  help.rs  joined.rs  mod.rs  roadmap.rs  rules.rs  start.rs  useful.rs  warn.rs
src/utils/: mod.rs
