[package]
name = "bot"
description = "Telegram bot manager for Xinux community"
version = "0.1.0"
edition = "2021"
license = "GPL-3"
homepage = "https://github.com/xinux-org/telegram"
repository = "https://github.com/xinux-org/telegram"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.17", features = [
  "macros",
  "webhooks",
  "webhooks-axum",
] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
orzklv = { version = "0.2", features = ["full"] }
libxinux = { version = "0.2.3", features = ["pkgs-async"] }
clap = { version = "4", features = ["derive"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
